Adicionado Servidor de WebSocket

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <aside id="c3"></aside>
             </main>  
             <div id="direita">
+                <p id="direita-action">
+                    Aguardando Oponente conectar...
+                </p>
             </div>      
         <footer>
 
